--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,8 @@
           <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
           {% endif %}
         {% endfor %}
+        <a class="page-link" href="https://slidr.io/robin-drexler/">Talks</a>
+
       </div>
     </nav>
 
