static menu data

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,12 +14,9 @@
       </span>
 
       <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-          {% endif %}
+        {% for my_page in site.data.menu %}
+          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.text | escape }}</a>
         {% endfor %}
-        <a class="page-link" href="https://slidr.io/robin-drexler/">Talks</a>
 
       </div>
     </nav>
