--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,9 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+          <li>
+            <a href="/about">Imprint</a>
+          </li>
         </ul>
       </div>
 
