--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,8 @@
   {% endif %}
   <script async custom-element="amp-analytics"
     src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+    {% if page.has_gist %}
+      <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+    {% endif %}
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
