--- a/_includes/minima.scss
+++ b/_includes/minima.scss
@@ -11,7 +11,7 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #0c50c7;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
