--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,5 +27,11 @@
     {% if page.has_gist %}
       <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
     {% endif %}
+
+    {% if page.has_youtube %}
+    <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
+    {% endif %}
+
+    
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
