--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -234,6 +234,7 @@
   margin-bottom: $spacing-unit;
 
   h2 {
+    margin-top: 20px;    
     font-size: 32px;
 
     @include media-query($on-laptop) {
@@ -242,6 +243,7 @@
   }
 
   h3 {
+    margin-top: 20px;
     font-size: 26px;
 
     @include media-query($on-laptop) {
