add service worker

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
 <footer class="site-footer">
-
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
@@ -31,3 +30,7 @@
   </div>
 
 </footer>
+
+
+<amp-install-serviceworker src="/sw.js" layout="nodisplay">
+</amp-install-serviceworker>
