--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,9 @@
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
+
+  <script async custom-element="amp-install-serviceworker" src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script>
+  
   <script async custom-element="amp-analytics"
     src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     {% if page.has_gist %}
@@ -32,6 +35,6 @@
     <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
     {% endif %}
 
-    
   <script async src="https://cdn.ampproject.org/v0.js"></script>
+
 </head>
